# api-docs/openapi/v3_0/doubanApi.json
@@ -2,10 +2,10 @@
   "openapi" : "3.0.1",
   "info" : {
     "title" : "Halo",
-    "version" : "2.17.0"
+    "version" : "2.20.0"
   },
   "servers" : [ {
-    "url" : "http://localhost:54610",
+    "url" : "http://localhost:49992",
     "description" : "Generated server url"
   } ],
   "security" : [ {
@@ -92,11 +92,14 @@
             "type" : "string"
           }
         }, {
-          "description" : "DoubanMovies filtered by genres.",
+          "description" : "DoubanMovies filtered by genre.",
           "in" : "query",
-          "name" : "genres",
+          "name" : "genre",
           "schema" : {
-            "type" : "string"
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
           }
         } ],
         "responses" : {
@@ -119,9 +122,9 @@
         "description" : "List all douban genres.",
         "operationId" : "ListGenres",
         "parameters" : [ {
-          "description" : "Genres name to query",
+          "description" : "Genres type to query",
           "in" : "query",
-          "name" : "name",
+          "name" : "type",
           "schema" : {
             "type" : "string"
           }
@@ -722,9 +725,6 @@
           },
           "spec" : {
             "$ref" : "#/components/schemas/DoubanMovieSpec"
-          },
-          "status" : {
-            "$ref" : "#/components/schemas/DoubanStatus"
           }
         }
       },
@@ -848,15 +848,6 @@
           },
           "spec" : {
             "$ref" : "#/components/schemas/DoubanMovieSpec"
-          }
-        }
-      },
-      "DoubanStatus" : {
-        "type" : "object",
-        "properties" : {
-          "observedVersion" : {
-            "type" : "integer",
-            "format" : "int64"
           }
         }
       },
